--- a/src/index.html
+++ b/src/index.html
@@ -1,68 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
-    <title>Мой первый сайт</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Проект</title>
 </head>
+<div class="container">
+    <div class="row"><h1>Наши преимущества</h1></div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/001-bee.png" class="bee" alt="">
+            <p>Преимущество 1</p>
+        </div>
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/002.png" alt="">
+            <p>Преимущество 2</p>
+        </div>
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/003-sun.png" alt="">
+            <p>Преимущество 3</p>
+        </div>
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/004-hand.png" class="bee" alt="">
+            <p>Преимущество 4</p>
+        </div>
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/005-world.png" alt="">
+            <p>Преимущество 5</p>
+        </div>
+        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
+            <img src="img/picture/006-forest.png" alt="">
+            <p>Преимущество 6</p>
+        </div>
+    </div>
+</div>
 
 <body>
-    <div class="section">
-        <h1 class="header"><span>Получите видео-инструкции</span><strong>Как заработать свой первый миллион</strong></h1>
-        <div class="main">
-            <div class="video">
-                <iframe width="550" height="315" src="https://www.youtube.com/embed/oE1pcmLtc6E" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="form">
-                <form action="#">
-                    <p class="form-header">Введите свой email</p>
-                    <input type="text" placeholder="Введит имя">
-                    <input type="text" placeholder="Введите email">
-                    <button class="btn">Примите инструкции</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="section">
-        <h2 class="feature-header">Почему нужно сделать это сейчас</h2>
-        <div class="feature">
-            <div class="col">
-                <img src="img/picture/001.png" alt="первая картинка">
-                <p>Первое преимущество</p>
-            </div>
-            <div class="col"><img src="img/picture/002.png" alt="вторая картинка">
-                <p>Второе преимущество</p>
-            </div>
-            <div class="col"><img src="img/picture/003.png" alt="третья картинка">
-                <p>Третье преимущество</p>
-            </div>
-            <div class="col"><img src="img/picture/004.png" alt="четвертая картинка">
-                <p>Четвертое преимущество</p>
-            </div>
-
-        </div>
-            <button class="btn">Примите инструкции</button>
-
-    </div>
-    <div class="section">
-    	<div class="clients">
-    	<h2 class="feature-header"> Наши клиенты</h2>
-    	<div class="pic">
-    		<img src="img/picture/01.png" alt="">
-    		<img src="img//picture/03.png" alt="">
-    		<img src="img/picture/04.png" alt="">
-    		<img src="img/picture/02.png" alt="">
-    	</div>
-    	<div class="pic">
-    		<img src="img/picture/05.png" alt="">
-    		<img src="img/picture/06.png" alt="">
-    		<img src="img/picture/07.png" alt="">
-    		<img src="img/picture/08.png" alt="">
-    	</div>
-    </div>
-    
 </body>
 
 </html>
