--- a/src/index.html
+++ b/src/index.html
@@ -3,41 +3,76 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Проект</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Project</title>
 </head>
-<div class="container">
-    <div class="row"><h1>Наши преимущества</h1></div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/001-bee.png" class="bee" alt="">
-            <p>Преимущество 1</p>
-        </div>
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/002.png" alt="">
-            <p>Преимущество 2</p>
-        </div>
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/003-sun.png" alt="">
-            <p>Преимущество 3</p>
-        </div>
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/004-hand.png" class="bee" alt="">
-            <p>Преимущество 4</p>
-        </div>
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/005-world.png" alt="">
-            <p>Преимущество 5</p>
-        </div>
-        <div class="col-xs-12 col-sm-6  col-md-4 col-lg-2">
-            <img src="img/picture/006-forest.png" alt="">
-            <p>Преимущество 6</p>
-        </div>
-    </div>
-</div>
 
 <body>
-</body>
+    <div id="all">
+        <div id="conteiner">
+            <div id="header">
+                <form action="#" method="POST">
+                    <p>
+                        <input type="text" name="zip" id="okno" value="Введите текст" />
+                        <input type="submit" id="knopka" value="Поиск" />
+                    </p>
+                </form>
+                <p><img src="/img/picture/logo.png" alt="Логотип" /></p>
+                <h1>Старая книга.<br /></h1>
+                <h2>Покупка продажа, поиск старых книг...</h2>
+                <ul id="menu">
+                    <li class="active"><a>Главная</a></li>
+                    <li><a href="">Каталог</a></li>
+                    <li><a href="">Объявления</a></li>
+                    <li><a href="">Карта</a></li>
+                    <li><a href="">Контакты</a></li>
+                    <li><a href="">Помощь</a></li>
+                </ul>
+            </div>
+            <div id="main">
+                <div id="right">
+                    <h2>Продать книгу</h2>
+                    <p>Чтобы предложить книгу к продаже перейдите на страницу
+                        <a href="">продать книгу.</a>
+                    </p>
+                    <h2>Купить книгу:</h2>
+                    <p>Чтобы оформить объявление о покупке интересующей Вас книги перейдите на страницу <a href="">купить книгу.</a>
+                    </p>
+                    <h2>Найти книгу::</h2>
+                    <p>Для оформления объявления о поиске конкретной книги пе- рейдиете в раздел <a href="">обьявления.</a> Предварительно ознакомь- тесь с категориями в разделе <a href="">каталог</a> либо воспользуйтесь окном поиска-возможно интересующее литературное издание уже имеется на сайте.
+                    </p>
+                    <h2>Просмотреть объявления:</h2>
+                    <p>Перейдите в раздел <a href="">обьявления,</a> чтобы ознакомиться с пере- чнем всех имеющихся предложений. Здесь же можно офор- мить объявление о дарении книги либо принятии ее в дар.
+                    </p>
+                    <h2>Владельцам домашних библиотек:</h2>
+                    <p>Если Вы являетесь владельцем домашней библиотеки и жела- ете подарить либо продать имеющиеся у Вас книги,можете прислать нам список имеющихся изданий для оптовой прода- жи и помещения их в <a href="">каталог.</a> Подробнее в разделе <a href="">помощь.</a>
+                    </p>
+                </div>
+                <div id="left">
+                    <h2>Главное о сайте.</h2>
+                    <p><span class="left">Oldbook.by</span>– сайт, позволяющий Вам размещать объявления о продаже, покупке,поиске старых книг на территории Рос- сийской Федерации, Республики Беларусь и других стран. Сайт является посредником между продавцами, покупателями и ценителями старых книг. Здесь можно подарить, обменять, продать или купить старые книги, букинистические издания.</p>
+                    <p><span class="left">Формат сайта</span>– доска объявлений о купле-продаже, поиске, дарении книг и периодических изданий.</p>
+                    <p><span class="left">На сайте Вы можете:</span>
+                        <br> -Разместить неограниченное количество объявлений о прода- же, покупке, поиске книг. -Комментировать размещенные книги. -Связаться с автором заинтересовавшего объявления, отпра- вив ему личное сообщение или прокомментировав объявление.
+                    </p>
+                    <p><span class="left">Подавать объявление можно без регистрации.</span>
+                        <br> Заристрированные пользователи имеют следующие возмож- ности: -При необходимости редактировать текст объявления и уда- лять его. -Получать уведомления на регистрационный e-mail о новых личных сообщениях и комментариях к своим объявлениям. Пройти регистрацию можно <a href="">здесь.</a></p>
+                </div>
+                <div id="footer">
+                    <div id="leftfoot">
+                        <div><span>Главная</span></div>
+                        <div><a href="">Каталог</a></div>
+                        <div><a href="">Объявления</a></div>
+                        <div><a href="">Карта</a></div>
+                        <div><a href="">Контакты</a></div>
+                        <div><a href="">Помощь</a></div>
+                    </div>
+                    <div id="rightfoot">
+                        <span>2012-2013 Oldbook.by</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </di </body>
 
 </html>
