--- a/modul_5_1/index.html
+++ b/modul_5_1/index.html
@@ -28,7 +28,7 @@
                     <img src="img/picture/logo.png" alt=""></div>
                 </div>
 
-                <div class="col-md-2 col-md-offset-4"><a class="phone-link" href="#">+7 495 771 05 08 </a></div>
+                <div class="col-md-2 col-md-offset-4"><a class="phone-link" href="tel:74957710508">+7 495 771 05 08 </a></div>
 
                 <div class="col-md-3">
                     <div class="wrap">
