--- a/modul_5_3/index.html
+++ b/modul_5_3/index.html
@@ -45,7 +45,7 @@
 
                 <div class="main-content">
                     <div class="row">
-                        <div class="col-md-7 col-sm-12 col-xs-12">
+                        <div class="col-md-7 col-sm-12 col-xs-8 col-xs-offset-1">
                             <div class="main-title">
                                 <h1>Автоматизированная штукатурка стен</h1>
                                 <p class="main-subtitle">Идеально ровные стены
