--- a/modul_5_3/index.html
+++ b/modul_5_3/index.html
@@ -56,7 +56,7 @@
                                 </span>
                                 <strong class="main-trigger">Оплата по факту</strong>
                             </div></div>
-                            <div class="col-lg-4 col-lg-offset-1 col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+                            <div class="col-lg-4 col-lg-offset-1 col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12">
                                 <div class="main-form">
                                     <h2 class="main-form-header">Для расчёта точной стоимости <br> закажите <strong>выезд замерщика</strong></h2>
                                     <form action="#">
