--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -20,9 +20,9 @@
 
 <div class="col-md-10 col-md-offset-1">
 	<div class="fotorama" data-nav="thumbs" data-allowfullscreen="native" data-autoplay="4000" data-loop="true">
-  <a href="https://s.fotorama.io/1_thumb.jpg" data-caption="Первая"><img src="https://s.fotorama.io/1.jpg" alt="картинка1" ></a>
-  <a href="https://s.fotorama.io/2_thumb.jpg" data-caption="Вторая"><img src="https://s.fotorama.io/2.jpg" alt="картинка2" ></a>
-  <a href="https://s.fotorama.io/3_thumb.jpg" data-caption="Третья"><img src="https://s.fotorama.io/3.jpg" alt="картинка3" ></a>
+  <a href="https://s.fotorama.io/1_thumb.jpg" data-caption="Первая"><img src="//s.fotorama.io/1.jpg" alt="картинка1" ></a>
+  <a href="https://s.fotorama.io/2_thumb.jpg" data-caption="Вторая"><img src="//s.fotorama.io/2.jpg" alt="картинка2" ></a>
+  <a href="https://s.fotorama.io/3_thumb.jpg" data-caption="Третья"><img src="//s.fotorama.io/3.jpg" alt="картинка3" ></a>
 </div>
 </div>
 </div>
