--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -8,9 +8,9 @@
     <title>Стартовая страница</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--Ссылка на таблицу стилей  -->
-   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+   <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
     
    
   </head>
@@ -22,9 +22,9 @@
 
 <div class="col-md-10 col-md-offset-1">
 	<div class="fotorama" data-nav="thumbs" data-allowfullscreen="native" data-autoplay="4000" data-loop="true">
-  <a href="//s.fotorama.io/1_thumb.jpg" data-caption="Первая"><img src="http://s.fotorama.io/1.jpg" alt="картинка1" ></a>
-  <a href="//s.fotorama.io/2_thumb.jpg" data-caption="Вторая"><img src="http://s.fotorama.io/2.jpg" alt="картинка2" ></a>
-  <a href="http://s.fotorama.io/3_thumb.jpg" data-caption="Третья"><img src="http://s.fotorama.io/3.jpg" alt="картинка3" ></a>
+  <a href="https://s.fotorama.io/1_thumb.jpg" data-caption="Первая"><img src="http://s.fotorama.io/1.jpg" alt="картинка1" ></a>
+  <a href="https://s.fotorama.io/2_thumb.jpg" data-caption="Вторая"><img src="http://s.fotorama.io/2.jpg" alt="картинка2" ></a>
+  <a href="https://s.fotorama.io/3_thumb.jpg" data-caption="Третья"><img src="http://s.fotorama.io/3.jpg" alt="картинка3" ></a>
 </div>
 </div>
 </div>
@@ -36,9 +36,9 @@
 
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
   
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
   <!--script
   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
   </body>
