--- a/modul_5_5/index.html
+++ b/modul_5_5/index.html
@@ -161,7 +161,7 @@
         $('.popup-btn').on('click', function(event){
             event.preventDefault();
             $('.popup').fadeIN();});
-        $('popup-close').on('click', function(event){
+        $('.popup-close').on('click', function(event){
             event.preventDefault();
             $('.popup').fadeOut();
         });
