--- a/modul_5_5/index.html
+++ b/modul_5_5/index.html
@@ -154,17 +154,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
-
-        <script src="slick/slick.min.js"></script>
+            <script src="slick/slick.min.js"></script>
     <!-- Инициализация слайдера -->
     <script>$(document).ready(function(){
         $('.popup-btn').on('click', function(event){
             event.preventDefault();
-            $('.popup').fadeIN();});
+            $('.popup').fadeIn();
+           });
         $('.popup-close').on('click', function(event){
             event.preventDefault();
             $('.popup').fadeOut();
         });
+
         $('.features-slider').slick({
   infinite: true,
   slidesToShow: 4,
